selfhost/test/typechecker/bindingdecl_error_duplicate_name.out
Error at %FILE_NAME%:3:5
Duplicate name 'x'
  |  val x = 789
         ^
This name is already declared at (1:5)
  |  val x = 123
         ^
